use anchor element relative to element instead of padding-margin trick on element to fix overlapping issue [DELPHI-102]

--- a/src/main/webapp/resources/css/disabled.css
+++ b/src/main/webapp/resources/css/disabled.css
@@ -9,15 +9,18 @@ body {
 .myfull { text-align:justify; }
 
 .survey-element {
-	margin: -25px 5px 5px 5px;
+	margin: 25px 5px 5px 5px;
 	max-width: 980px;
 	overflow-x: auto;
-	padding-top: 55px;
 }
 
-#bodyManagementTest .survey-element {
-	margin-top: -100px;
-	padding-top: 130px;
+.survey-element-anchor {
+	position: relative;
+	top: -55px;
+}
+
+#bodyManagementTest .survey-element-anchor {
+	top: -125px;
 }
 
 #runner-content a {
