--- a/src/main/webapp/resources/css/runnerresponsive.css
+++ b/src/main/webapp/resources/css/runnerresponsive.css
@@ -241,13 +241,17 @@ textarea.freetext {
 }
 
 .survey-element {
-	margin: -25px 5px 5px 5px;
+	margin: 25px 5px 5px 5px;
 	padding-top: 55px;
 }
 
-#bodyManagementTest .survey-element {
-	margin-top: -100px;
-	padding-top: 130px;
+.survey-element-anchor {
+	position: relative;
+	top: -55px;
+}
+
+#bodyManagementTest .survey-element-anchor {
+	top: -125px;
 }
 
 .freetext, .email, .regex, .alignment-div, .text {
